tests/language_modules/10_expressions/valid/integer_arithmetic_precedence.vf
module IntegerArithmeticPrecedence

procedure main()
is
    check 1 + 2 * 3 = 7
end main

end IntegerArithmeticPrecedence