tests/language_modules/10_expressions/invalid_semantics/boolean_operator_operand_mismatch.vf
module BooleanOperatorOperandMismatch

procedure main()
is
    check true and 1
end main

end BooleanOperatorOperandMismatch